--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.nekolr'
-version '1.0-SNAPSHOT'
+version '0.7.0'
 
 apply plugin: 'java'
 
@@ -13,8 +13,12 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'cn.hutool', name: 'hutool-core', version: '4.1.19'
-    compile group: 'org.yaml', name: 'snakeyaml', version: '1.23'
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
+    compile group: 'cn.hutool', name: 'hutool-core', version: '4.5.10'
+    compile group: 'org.yaml', name: 'snakeyaml', version: '1.24'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+}
 
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
