--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,29 @@
+plugins {
+    id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
+}
+
 group 'com.nekolr'
 version '0.8.0'
 
-apply plugin: 'java'
-
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_11
 
 repositories {
     mavenLocal()
-    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+    maven { url "https://maven.aliyun.com/nexus/content/groups/public/" }
     mavenCentral()
 }
 
+javafx {
+    version = "11.0.2"
+    modules = ['javafx.controls', 'javafx.fxml']
+}
+
+mainClassName = 'com.nekolr.Main'
+
 dependencies {
+    implementation group: 'org.openjfx', name: 'javafx-fxml', version: '11.0.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'cn.hutool', name: 'hutool-core', version: '4.5.10'
     compile group: 'org.yaml', name: 'snakeyaml', version: '1.24'
